Minor changes UC
Risolti problemi di punteggiatura e layout

--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/UC11.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/UC11.tex
@@ -55,7 +55,7 @@ Il presente diagramma vuole riassumere la possibilità di prenotazione delle pre
 		\end{itemize}
 	\end{itemize}
 \end{itemize}
-
+\newpage
 \subsubsection{UC11.3 - Marca postazione libera}
 
 \begin{itemize}
@@ -125,7 +125,7 @@ Il presente diagramma vuole riassumere la possibilità di prenotazione delle pre
 
 \begin{itemize}
 \item \textbf{Attori primari:} amministratore;
-\item \textbf{Descrizione:} l’amministratore può marcare la postazione precedentemente selezionata come “disabilitata”, nuovamente abilitata, quindi servibile ed occupabile da utenti;
+\item \textbf{Descrizione:} l’amministratore può marcare la postazione precedentemente selezionata come “disabilitata”, nuovamente abilitata, quindi servibile ed occupabile dagli utenti;
 \item \textbf{Precondizione:} l’amministratore naviga nell’apposita sezione di gestione della postazione; 
 \item \textbf{Postcondizione:} l’amministratore ha marcato con successo una postazione, precedentemente disabilitata, come abilitata;
 \item \textbf{Scenario principale:} 
