--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/UC5.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/UC5.tex
@@ -79,7 +79,7 @@ Il presente diagramma vuole riassumere la possibilità di gestione delle prenota
 \begin{itemize}
 \item \textbf{Attori primari:} utente autenticato;
 \item \textbf{Descrizione:} l’utente vuole visualizzare le sue prenotazioni attive nel sistema;
-\item \textbf{Precondizione:} l’utente è autenticato e naviga nell’apposita sezione di visualizzazione delle sue prenotazione;
+\item \textbf{Precondizione:} l’utente è autenticato e naviga nell’apposita sezione di visualizzazione delle sue prenotazioni;
 \item \textbf{Postcondizione:} l’utente visualizza correttamente le sue prenotazioni attive;
 \item \textbf{Scenario principale:} 
 	\begin{itemize}
