--- a/Shared/Sweleven.sty
+++ b/Shared/Sweleven.sty
@@ -139,8 +139,9 @@
 
 
 % Colors
+\definecolor{verylightgray}{gray}{0.97}
 \newcommand{\evenRowColor}{lightgray}
-\newcommand{\oddRowColor}{white}
+\newcommand{\oddRowColor}{verylightgray}
 \newcommand{\primaryColor}{Blue}
 \newcommand{\secondaryColor}{white}
 
