aggiunto registro modifiche

--- a/DocumentiEsterni/PianoDiQualifica/src/RegistroModifiche.tex
+++ b/DocumentiEsterni/PianoDiQualifica/src/RegistroModifiche.tex
@@ -13,8 +13,6 @@
         % usare \responsabile per indicare responsabile
 
         %		L'ultimo evento deve essere sempre all'inizio della tabella
-        X.X.X                  & XXXX-XX-XX                                       & Responsabile                                & TODO & \responsabile{} \\
-        X.X.X                  & XXXX-XX-XX                                       & Verifica                                    & TODO & \verificatore{} \\
-        X.X.X                  & XXXX-XX-XX                                       & Descrizione edit                            & TODO & \redattore{}    \\
+        0.0.1                  & 2021-01-02                                       & Prima stesura                                & Andrea De Tomasi & \redattore{} \\
     \end{longtable}
 }
