--- a/DocumentiInterni/NormeDiProgetto/src/ProcessiDiSupporto/src/GestioneDellaQualita.tex
+++ b/DocumentiInterni/NormeDiProgetto/src/ProcessiDiSupporto/src/GestioneDellaQualita.tex
@@ -57,7 +57,7 @@ Questi test vengono effettuati con la partecipazione del committente, cui compit
 
 \subsection{Codice identificativo dei test}
 Ogni test prodotto dal gruppo {\Gruppo}, adotterà la seguente nomenclatura:
-\begin{center} \textbf{T[t]} \end{center}
+\begin{center} \textbf{T[t][x]} \end{center}
 Dove:
 \begin{itemize}
 	\item T è una keyword statica per identificare appunto un “Test”
@@ -69,12 +69,12 @@ Dove:
 			\item R: test di regressione;
 			\item A: test di accettazione.
 		\end{itemize}
+	\item x è l'ID univoco e prograssivo utile per identificare il test
 \end{itemize}
 
 \subsection{Strumenti}
 \subsubsection{Verifica ortografica}
 La verifica ortografico-sintattica viene svolta dall’editor utilizzato dal gruppo, ovvero Overleaf, TexEdit o TexStudio. 
-
 
 
 
