Correzioni per review

--- a/DocumentiInterni/NormeDiProgetto/src/ProcessiPrimari/src/Sviluppo/src/Attivita/src/AnalisiDeiRequisiti/src/scopo.tex
+++ b/DocumentiInterni/NormeDiProgetto/src/ProcessiPrimari/src/Sviluppo/src/Attivita/src/AnalisiDeiRequisiti/src/scopo.tex
@@ -4,6 +4,6 @@ Gli analisti del gruppo \Gruppo{} hanno il compito di individuare, elencare e de
     \item una descrizione generale del prodotto;
     \item tracciamento dei requisiti individuati;
     \item casi d'uso rappresentati tramite diagrammi UML;
-    \item argomentazioni per i progettisti?
-    \item funzionalita' e requisiti concordati con il proponente?
+    \item eventuali argomentazioni per i progettisti;
+    \item funzionalit\`{a} e requisiti concordati con il proponente.
 \end{itemize}
