--- a/DocumentiInterni/NormeDiProgetto/src/ProcessiPrimari/src/Sviluppo/src/Attivita/src/AnalisiDeiRequisiti/src/ClassificazioneRequisiti.tex
+++ b/DocumentiInterni/NormeDiProgetto/src/ProcessiPrimari/src/Sviluppo/src/Attivita/src/AnalisiDeiRequisiti/src/ClassificazioneRequisiti.tex
@@ -10,9 +10,9 @@ Dove:
     \item \textbf{R}: indica che si tratta di un requisito;
     \item \textbf{Priorit\`{a}}: assume, a seconda del grado di priorit\`{a} i valori:
     \begin{itemize}
-        \item \textbf{O}: obbligatorio, cio\'{e} strettamente necessario;
-        \item \textbf{D}: desiderabile, cio\'{e} non strettamente necessario;
-        \item \textbf{F}: facoltativo, cio\'{e} contrattabile in corso d'opera;
+        \item \textbf{O}: obbligatorio, cio\`{e} strettamente necessario;
+        \item \textbf{D}: desiderabile, cio\`{e} non strettamente necessario;
+        \item \textbf{F}: facoltativo, cio\`{e} contrattabile in corso d'opera;
     \end{itemize}
     \item \textbf{Tipologia}: assume, a seconda del tipo di requisito, i valori:
     \begin{itemize}
