Correzione Processi di Supporto
Correzione di circa 3/4 degli errori segnalati

--- a/DocumentiInterni/NormeDiProgetto/src/ProcessiDiSupporto/src/NormeTipografiche.tex
+++ b/DocumentiInterni/NormeDiProgetto/src/ProcessiDiSupporto/src/NormeTipografiche.tex
@@ -7,7 +7,7 @@ Il gruppo ha scelto di utilizzare la convenzione CamelCase con, in aggiunta, le 
 	\begin{center}
 	\textbf{NomeDelFile\_v.X.Y.Z}
 	\end{center}
-	dove X,Y e Z indicano la versione del documento;
+	dove X, Y e Z indicano la versione del documento;
 \end{itemize}
 
 \subsubsection{Elenchi puntati}
@@ -36,7 +36,7 @@ In tutti i documenti prodotti dal gruppo {\Gruppo}, si adotteranno le seguenti s
 	\item RA: indica la Revisione di Accettazione.
 \end{itemize}
 
-\subsubsection{Tabelle}{\Gruppo}
+\subsubsection{Tabelle}
 Il gruppo {\Gruppo}, durante la stesura della documentazione necessaria al progetto, potrebbe far ampio uso di tabelle riassuntive, per dare un carattere meno prolisso alla documentazione e facilitare la lettura della stessa.
 Tutte le tabelle saranno costruite secondo i seguenti standard:
 \begin{itemize}
@@ -63,20 +63,20 @@ L’esempio sotto riportato riporta una tabella costruita secondo le disposizion
 
 
 \subsubsection{Immagini}
-Tutte le immagini utilizzate durante la stesura della documentazione, dovranno essere collocate in una organizzazione gerarchica all’interno delle cartelle e sottocartelle della documentazione. In particolare, ogni immagine sarà salvata dentro la specifica cartella del documento a cui appartiene. Un esempio di nomenclatura utilizzata per le immagini sarà la seguente:
-\textbf{N\_nn\_\#\_nomeimg.estensione}\\
+Tutte le immagini utilizzate durante la stesura della documentazione, dovranno essere collocate seguendo una organizzazione gerarchica all’interno delle cartelle e sottocartelle della documentazione. In particolare, ogni immagine sarà salvata dentro la specifica cartella del documento a cui appartiene. Un esempio di nomenclatura utilizzata per le immagini sarà la seguente:
+\textbf{N\_nn\_\verb|#|\_nomeimg.estensione}\\
 dove:
 \begin{itemize}
 	\item N indicherà la sezione dove verrà inserita l’immagine;
 	\item n indicherà la sottosezione dove verrà inserita l’immagine;
 	\item # indicherà un numero intero naturale progressivo, che sarà l’indice dell’immagine;
-	\item nomeimmagine indicherà il nome proprio dell’immagine;
+	\item nomeimg indicherà il nome proprio dell’immagine;
 	\item estensione indicherà il formato dell’immagine (ex: jpg, png…).
 \end{itemize}
 Ogni immagine, in aggiunta, sarà correlata da una breve descrizione della stessa, posizionata in centro pagina.
 
 \subsubsection{Diagrammi UML}
-Ogni diagramma uml inserito all’interno della documentazione avrà estensione png. Il programma atto alla creazione dei diagrammi uml sarà starUML
+Ogni diagramma UML inserito all’interno della documentazione avrà estensione png. Il programma atto alla creazione dei diagrammi UML sarà StarUML o, in alternativa, DrawIO.
 
 
 
