--- a/DocumentiInterni/NormeDiProgetto/src/ProcessiDiSupporto/src/StrutturaDellaDocumentazione.tex
+++ b/DocumentiInterni/NormeDiProgetto/src/ProcessiDiSupporto/src/StrutturaDellaDocumentazione.tex
@@ -28,7 +28,7 @@ Ogni documento riporta una sezione denominata con il nome sopracitato, recante u
 \end{itemize}
 
 \subsubsection{Indice}
-Ogni documento prodotto dal gruppo {\Gruppo} contiene, all’inizio dello stesso, un indice, cui scopo è quello di esplicitare le parti gerarchiche che compongono il documento in oggetto. 
+Ogni documento prodotto dal gruppo {\Gruppo} contiene, all’inizio dello stesso, un indice cui scopo è quello di esplicitare le parti gerarchiche che compongono il documento in oggetto. 
 
 \subsubsection{Elenco immagini}
 I documenti muniti di figure saranno provvisti di un indice delle figure contenute, con una breve descrizione della stessa ed il numero della pagina dove è collocata.
