--- a/DocumentiInterni/NormeDiProgetto/src/ProcessiDiSupporto/src/Validazione.tex
+++ b/DocumentiInterni/NormeDiProgetto/src/ProcessiDiSupporto/src/Validazione.tex
@@ -10,7 +10,7 @@ Il processo di validazione deve rispettare i seguenti punti:
 \end{itemize}
 
 \subsubsection{Attività}
-Le attività da svolgere per validare il prodotto sono di esclusiva responsabilità del Responsabile di Progetto, e sono le seguenti:
+Le attività da svolgere per validare il prodotto sono un onere esclusivo del Responsabile di Progetto, e sono le seguenti:
 \begin{itemize}
 	\item accettare ed approvare il documento;
 	\item rigettare il documento, fornendo indicazioni utili per la sua correzione.
