--- a/DocumentiInterni/NormeDiProgetto/src/ProcessiDiSupporto/src/ClassificazioneDeiDocumenti.tex
+++ b/DocumentiInterni/NormeDiProgetto/src/ProcessiDiSupporto/src/ClassificazioneDeiDocumenti.tex
@@ -4,13 +4,13 @@ Tutti i documenti prodotti dal gruppo {\Gruppo} necessitano dell’approvazione 
 \subsubsection{Documentazione Interna}
 La documentazione interna è un particolare tipo di documentazione che verrà divulgata solamente internamente al gruppo {\Gruppo}. Fanno parte della documentazione interna i seguenti tipi di documenti:
 \begin{itemize}
-	\item verbali Interni;
+	\item verbali interni;
 	\item studio di fattibilità;
 	\item norme di progetto.
 \end{itemize}
 
 \subsubsection{Documentazione Esterna}
-La documentazione esterna è un tipo di documentazione cui divulgazione sarà esterna al gruppo {\Gruppo}. Fanno parte della documentazione esterna i seguenti tipi di documenti:
+La documentazione esterna è un tipo di documentazione la cui divulgazione sarà esterna al gruppo {\Gruppo}, come ad esempio l'azienda proponente. Fanno parte della documentazione esterna i seguenti tipi di documenti:
 \begin{itemize}
 	\item analisi dei requisiti;
 	\item piano di qualifica;
@@ -20,7 +20,7 @@ La documentazione esterna è un tipo di documentazione cui divulgazione sarà es
 \end{itemize}
 
 \subsubsection{Stesura dei verbali}
-Al momento della redazione del verbale, un membro del gruppo {\Gruppo} sarà scelto, a rotazione, come Redattore dello stesso. Per ogni incontro del gruppo verrà prodotto un verbale ad uso, come specificato sopra, solamente interno. Una volta steso lo stesso ed approvato, non è prevista la possibilità di modifica dello stesso, in quanto richiederebbe una modifica di azioni e/o tecnologie già discusse in sedute precedenti in modo retroattivo. La struttura del verbale è qui descritta:
+Ad ogni riunione, un membro del gruppo {\Gruppo} sarà scelto, a rotazione, come Redattore dello stesso. Per ogni incontro del gruppo verrà prodotto un verbale ad uso, come specificato sopra, solamente interno. Una volta approvato, non è più prevista la possibilità di modifica, in quanto richiederebbe una modifica di azioni e/o tecnologie già discusse in sedute precedenti in modo retroattivo. La struttura del verbale è la seguente:
 \begin{itemize}
 	\item luogo svolgimento riunione;
 	\item data svolgimento riunione;
