--- a/DocumentiInterni/NormeDiProgetto/src/ProcessiDiSupporto/src/GestioneDellaQualita.tex
+++ b/DocumentiInterni/NormeDiProgetto/src/ProcessiDiSupporto/src/GestioneDellaQualita.tex
@@ -1,9 +1,11 @@
 \subsection{Gestione della qualità}
 Per la trattazione approfondita della gestione della qualità del software o documentazione prodotta, si farà riferimento all’apposita documentazione PdQ, dove verranno descritte le metodologie atte al raggiungimento di una qualità generale il più possibilmente eccellente. Nello specifico, vengono trattate le seguenti tematiche:
 \begin{itemize}
-	\item gli standard utilizzati;{\Gruppo}
+	\item gli standard utilizzati;
 	\item le funzionalità del software più significative per il progetto. 
+\end{itemize}
 In aggiunta, per ogni processo verranno descritti dettagliatamente:
+\begin{itemize}
 	\item gli obiettivi;
 	\item la strategia di perseguimento;
 	\item le metriche.
@@ -31,7 +33,7 @@ L’analisi statica studia la documentazione o il codice dell’applicazione sen
 Le due metodologie per effettuare l’analisi statica sono le seguenti:
 \begin{itemize}
 	\item Walkthrough: il verificatore effettuerà una lettura e studio completo dell’intero documento/porzione di codice alla ricerca di eventuali errori. Questa tecnica verrà utilizzata maggiormente nella parte iniziale del progetto;
-	\item Inspection: il verificatore effettuerà una lettura mirata e specifica in alcuni punti specifici dove c’è più probabilità di riscontrare un errore logico.
+	\item Inspection: il verificatore effettuerà una lettura mirata in alcuni punti specifici dove c’è più probabilità di riscontrare un errore logico.
 \end{itemize}
 
 \subsubsection{Analisi dinamica}
@@ -50,9 +52,9 @@ Il loro scopo è quello di ampliare man mano l’unità di codice testata, trami
 I testi di sistema hanno lo scopo di testare l’applicativo prodotto nella sua interezza, portando alla luce eventuali problematiche sulle parti del codice sviluppate da altri sviluppatori. Tramite sempre questi test, si verifica che il prodotto soddisfi completamente tutti i requisiti richiesti.
 
 \subsubsection{Test di regressione}
-Questi test si effettuano a seguito di una aggiunta o modifica al sistema, verificando la qualità di nuove versione di software scritte. Lo scopo primario è il test di tutte le nuove funzionalità implementate nel prodotto, verificando, inoltre, che le precedenti funzionalità già implementate abbiano mantenuto la loro logica e funzione.
+Questi test si effettuano a seguito di una aggiunta o modifica al sistema, verificando la qualità di nuove versioni di software scritte. Lo scopo primario è il test di tutte le nuove funzionalità implementate nel prodotto, verificando, inoltre, che le precedenti funzionalità già implementate abbiano mantenuto la loro logica e funzione.
 
-\subsubsection{Test di accetazione}
+\subsubsection{Test di accettazione}
 Questi test vengono effettuati con la partecipazione del committente, cui compito è quello di verificare il prodotto per garantire il soddisfacimento del cliente. Il superamento di questo test, garantisce che il software sia completamente collaudato e pronto per il rilascio.
 
 \subsection{Codice identificativo dei test}
