Correzione Processi di Supporto
Risolto errore di compilazione del documento dovuto al simbolo "#"

--- a/DocumentiInterni/NormeDiProgetto/src/ProcessiDiSupporto/src/NormeTipografiche.tex
+++ b/DocumentiInterni/NormeDiProgetto/src/ProcessiDiSupporto/src/NormeTipografiche.tex
@@ -64,12 +64,12 @@ L’esempio sotto riportato riporta una tabella costruita secondo le disposizion
 
 \subsubsection{Immagini}
 Tutte le immagini utilizzate durante la stesura della documentazione, dovranno essere collocate seguendo una organizzazione gerarchica all’interno delle cartelle e sottocartelle della documentazione. In particolare, ogni immagine sarà salvata dentro la specifica cartella del documento a cui appartiene. Un esempio di nomenclatura utilizzata per le immagini sarà la seguente:
-\textbf{N\_nn\_\verb|#|\_nomeimg.estensione}\\
+\textbf{N\_nn\_\#\_nomeimg.estensione}\\
 dove:
 \begin{itemize}
 	\item N indicherà la sezione dove verrà inserita l’immagine;
 	\item n indicherà la sottosezione dove verrà inserita l’immagine;
-	\item # indicherà un numero intero naturale progressivo, che sarà l’indice dell’immagine;
+	\item \# indicherà un numero intero naturale progressivo, che sarà l’indice dell’immagine;
 	\item nomeimg indicherà il nome proprio dell’immagine;
 	\item estensione indicherà il formato dell’immagine (ex: jpg, png…).
 \end{itemize}
