--- a/DocumentiEsterni/PianoDiProgetto/src/Preventivo/src/PreventivoProgettazioneDettaglio.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Preventivo/src/PreventivoProgettazioneDettaglio.tex
@@ -49,17 +49,17 @@ La suddivisione di quante ore, ciascun componente del gruppo, ha svolto per ogni
 		]
 			\legend{Responsabile, Amministratore, Analista, Progettista, Programmatore, Verificatore}
 			% Responsabile
-			\addplot [ybar, fill=blue] coordinates {\ColonnaIstogramma{0}{6}{0}{0}{0}{10}{0}{10}};
+			\addplot [ybar, fill=blue] coordinates {\ColonnaIstogramma{0}{6}{0}{0}{0}{10}{0}};
 			% Amministratore
-			\addplot [ybar, fill=yellow] coordinates {\ColonnaIstogramma{10}{0}{5}{4}{8}{0}{3}{0}};
+			\addplot [ybar, fill=yellow] coordinates {\ColonnaIstogramma{10}{0}{5}{4}{8}{0}{3}};
 			% Analista
-			\addplot [ybar, fill=red] coordinates {\ColonnaIstogramma{0}{0}{0}{0}{0}{0}{0}{0}};
+			\addplot [ybar, fill=red] coordinates {\ColonnaIstogramma{0}{0}{0}{0}{0}{0}{0}};
 			% Progettista
-			\addplot [ybar, fill=green] coordinates {\ColonnaIstogramma{13}{11}{14}{12}{9}{8}{13}{11}};
+			\addplot [ybar, fill=green] coordinates {\ColonnaIstogramma{13}{11}{14}{12}{9}{8}{13}};
 			% Programmatore
-			\addplot [ybar, fill=grigetto] coordinates {\ColonnaIstogramma{16}{16}{17}{19}{20}{18}{20}{18}};
+			\addplot [ybar, fill=grigetto] coordinates {\ColonnaIstogramma{16}{16}{17}{19}{20}{18}{20}};
 			% Verificatore
-			\addplot [ybar, fill=orange] coordinates {\ColonnaIstogramma{11}{17}{14}{15}{13}{14}{14}{11}};
+			\addplot [ybar, fill=orange] coordinates {\ColonnaIstogramma{11}{17}{14}{15}{13}{14}{14}};
 		\end{axis}
 	\end{tikzpicture}
 \end{center}
