--- a/DocumentiEsterni/PianoDiProgetto/src/Preventivo/src/PreventivoProgettazioneArchitetturale.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Preventivo/src/PreventivoProgettazioneArchitetturale.tex
@@ -2,7 +2,6 @@
 
 \subsubsection{Divisione oraria}
 La seguente tabella rappresenta la distribuzione oraria dei ruoli per ogni componente del gruppo:
-{
 \rowcolors{2}{\evenRowColor}{\oddRowColor}
 \renewcommand{\arraystretch}{2}
 \begin{longtable}[h!] { C{4cm} C{1cm} C{1cm} C{1cm} C{1cm} C{1cm} C{1cm} C{3cm}}
@@ -26,12 +25,10 @@ La seguente tabella rappresenta la distribuzione oraria dei ruoli per ogni compo
 \EM{}                     &  - &  - &  - & - & - & - & - \\
 \FP{}                     &  - &  - &  - & - & - & - & - \\
 \GG{}                     &  - &  - &  - & - & - & - & - \\
-\textbf{Ore totali ruolo} & X & X & X & - & - & X & X \\
+\textbf{Ore totali ruolo} & X & X & X & - & - & X & X 
 
 		
 \end{longtable}
-}
-
 La suddivisione delle ore svolte da ciascun componente del gruppo per ogni ruolo viene rappresentata nel seguente istogramma:
 \begin{center}
 	\pgfplotsset{width=17cm, height=8.5cm}
@@ -49,17 +46,17 @@ La suddivisione delle ore svolte da ciascun componente del gruppo per ogni ruolo
 		]
 			\legend{Responsabile, Amministratore, Analista, Progettista, Programmatore, Verificatore}
 			% Responsabile
-			\addplot [ybar, fill=blue] coordinates {\ColonnaIstogramma{5}{8}{0}{0}{0}{0}{6}{0}};
+			\addplot [ybar, fill=blue] coordinates {\ColonnaIstogramma{5}{8}{0}{0}{0}{0}{6}};
 			% Amministratore
-			\addplot [ybar, fill=yellow] coordinates {\ColonnaIstogramma{0}{0}{8}{10}{6}{0}{0}{0}};
+			\addplot [ybar, fill=yellow] coordinates {\ColonnaIstogramma{0}{0}{8}{10}{6}{0}{0}};
 			% Analista
-			\addplot [ybar, fill=red] coordinates {\ColonnaIstogramma{0}{0}{0}{6}{0}{13}{0}{8}};
+			\addplot [ybar, fill=red] coordinates {\ColonnaIstogramma{0}{0}{0}{6}{0}{13}{0}};
 			% Progettista
-			\addplot [ybar, fill=green] coordinates {\ColonnaIstogramma{14}{18}{10}{10}{5}{5}{0}{7}};
+			\addplot [ybar, fill=green] coordinates {\ColonnaIstogramma{14}{18}{10}{10}{5}{5}{0}};
 			% Programmatore
-			\addplot [ybar, fill=grigetto] coordinates {\ColonnaIstogramma{10}{0}{5}{0}{7}{7}{17}{0}};
+			\addplot [ybar, fill=grigetto] coordinates {\ColonnaIstogramma{10}{0}{5}{0}{7}{7}{17}};
 			% Verificatore
-			\addplot [ybar, fill=orange] coordinates {\ColonnaIstogramma{4}{7}{6}{6}{13}{6}{8}{16}};
+			\addplot [ybar, fill=orange] coordinates {\ColonnaIstogramma{4}{7}{6}{6}{13}{6}{8}};
 		\end{axis}
 	\end{tikzpicture}
 \end{center}
