Review Processi Organizzativi
Review processi organizzativi - Processi di supporto

--- a/DocumentiInterni/NormeDiProgetto/src/ProcessiDiSupporto/main.tex
+++ b/DocumentiInterni/NormeDiProgetto/src/ProcessiDiSupporto/main.tex
@@ -8,21 +8,19 @@
 %\input{../../src/Comandi.tex}
 %\section{Processi di Supporto}
 
-\input{src/ProcessiDiSupporto/src/IntroduzioneENorme}
+\input{src/ProcessiDiSupporto/src/IntroduzioneENorme.tex}
 \newpage
-\input{src/ProcessiDiSupporto/src/StrutturaDellaDocumentazione}
+\input{src/ProcessiDiSupporto/src/StrutturaDellaDocumentazione.tex}
 \newpage
-\input{src/ProcessiDiSupporto/src/ClassificazioneDeiDocumenti}
+\input{src/ProcessiDiSupporto/src/ClassificazioneDeiDocumenti.tex}
 \newpage
-\input{src/ProcessiDiSupporto/src/NormeTipografiche}
+\input{src/ProcessiDiSupporto/src/NormeTipografiche.tex}
 \newpage
-\input{src/ProcessiDiSupporto/src/Strumenti}
+\input{src/ProcessiDiSupporto/src/Strumenti.tex}
 \newpage
-\input{src/ProcessiDiSupporto/src/GestioneDellaConfigurazione}
+\input{src/ProcessiDiSupporto/src/GestioneDellaConfigurazione.tex}
 \newpage
-\input{src/ProcessiDiSupporto/src/GestioneDellaQualita}
+\input{src/ProcessiDiSupporto/src/GestioneDellaQualita.tex}
 \newpage
-\input{src/ProcessiDiSupporto/src/Validazione}
+\input{src/ProcessiDiSupporto/src/Validazione.tex}
 \newpage
-
-\end{document}
