--- a/DocumentiInterni/NormeDiProgetto/src/ProcessiDiSupporto/src/GestioneDellaConfigurazione.tex
+++ b/DocumentiInterni/NormeDiProgetto/src/ProcessiDiSupporto/src/GestioneDellaConfigurazione.tex
@@ -31,14 +31,14 @@ Come già precedentemente scritto, il gruppo {\Gruppo} ha deciso di utilizzare i
 Il gruppo {\Gruppo}, ha deciso di adottare la stessa nomenclaura per i nomi dei branch, standardizzati in NomeDocumento/Modifica, aggiornando successivamente anche il file Utils/brancheslist con il nome del branch appena creato.
 
 \subsubsection{Utilizzo di Git da CLI}
-In casi eccezionali può succedere che si necessiti la modifica di un file nel repository, ma che un membro del gruppo {\Gruppo} non abbia accesso al programma GitKraken. I comandi e i passi qui sottoelencati sono equivalenti a quanto elencato sopra, usando, al posto di GitKraken, la command line interface (CLI) di Git. I passi e le istruzioni da impartire a terminale sono le seguenti:
+In casi eccezionali può succedere che sia necessaria la modifica di un file nel repository, ma che un membro del gruppo {\Gruppo} non abbia accesso al programma GitKraken. I comandi ed i passi qui sottoelencati sono equivalenti a quanto elencato sopra, usando, al posto di GitKraken, la command line interface (CLI) di Git. I passi e le istruzioni da impartire a terminale sono le seguenti:
 \begin{itemize}
-	\item spostarsi sul ramo dove si intende fare una modifica, mediante comando git checkout seguito dal nome del branch desiderato;
-	\item eseguire il comando git pull per sincronizzare il proprio repository locale con quello remoto, scaricando quindi tutte le modifiche effettuate anche da altri collaboratori;
+	\item spostarsi sul ramo dove si intende fare una modifica, mediante comando \textbf{git checkout} seguito dal nome del branch desiderato;
+	\item eseguire il comando \textbf{git pull} per sincronizzare il proprio repository locale con quello remoto, scaricando quindi tutte le modifiche effettuate anche da altri collaboratori;
 	\item svolgere la propria attività di modifica al file desiderato;
-	\item impartire il comando git add seguito dai nomi dei file modificati nel punto precedente;
-	\item eseguire il comando git commit -m seguito da una descrizione sommaria ma sufficientemente esplicativa del compito svolto, inserita tra i caratteri “”;
-	\item eseguire il comando git push per sincronizzare il proprio lavoro in locale nel repository remoto, rendendolo quindi visibile a tutti i membri del gruppo.
+	\item impartire il comando \textbf{git add} seguito dai nomi dei file modificati nel punto precedente;
+	\item eseguire il comando \textbf{git commit -m} seguito da una descrizione sommaria ma sufficientemente esplicativa del compito svolto, inserita tra i caratteri “”;
+	\item eseguire il comando \textbf{git push} per sincronizzare il proprio lavoro in locale nel repository remoto, rendendolo quindi visibile a tutti i membri del gruppo.
 \end{itemize}
 
 
