--- a/DocumentiInterni/NormeDiProgetto/src/ProcessiDiSupporto/src/NormeTipografiche.tex
+++ b/DocumentiInterni/NormeDiProgetto/src/ProcessiDiSupporto/src/NormeTipografiche.tex
@@ -40,9 +40,9 @@ In tutti i documenti prodotti dal gruppo {\Gruppo}, si adotteranno le seguenti s
 Il gruppo {\Gruppo}, durante la stesura della documentazione necessaria al progetto, potrebbe far ampio uso di tabelle riassuntive, per dare un carattere meno prolisso alla documentazione e facilitare la lettura della stessa.
 Tutte le tabelle saranno costruite secondo i seguenti standard:
 \begin{itemize}
-	\item l’header della tabella, avrà sfondo blu e colore di background bianco;
+	\item l’header della tabella avrà sfondo blu, con colore del font bianco;
 	\item la prima parola di ogni cella avrà la lettera maiuscola;
-	\item per facilitare la lettura tra più righe, si differenzieranno le righe con indice pari da quelle dispari, alternando ciclicamente il colore bianco e grigio;
+	\item per facilitare la lettura tra più righe, si differenzieranno le righe con indice pari da quelle dispari, alternando ciclicamente il colore grigio chiaro e grigio;
 	\item la tabella sarà in posizione centrale rispetto al documento.
 \end{itemize}
 
