--- a/DocumentiInterni/NormeDiProgetto/src/ProcessiDiSupporto/src/StrutturaDellaDocumentazione.tex
+++ b/DocumentiInterni/NormeDiProgetto/src/ProcessiDiSupporto/src/StrutturaDellaDocumentazione.tex
@@ -1,5 +1,5 @@
 \subsection{Struttura della documentazione}
-Ogni documento prodotto che verrà consegnato assieme al software "nomesoftware" verrà realizzato secondo la struttura spiegata nel corso di questa documentazione.
+Ogni documento prodotto che verrà consegnato assieme al software \NomeProgetto{} verrà realizzato secondo la struttura spiegata nel corso di questa documentazione.
 
 \subsubsection{Struttura prima pagina}
 La prima pagina del documento è così formata:
@@ -18,7 +18,7 @@ La prima pagina del documento è così formata:
 	\end{itemize}
 	
 \subsubsection{Registro delle modifiche}
-Ogni documento riporta una sezione denominata con il nome sopracitato, recante una descrizione sommaria sulle modifiche effettuate al documento. Il presente registro è formattato in modalità tabellare, dove sono riportate le seguenti voci:	
+Ogni documento riporta una sezione denominata come sopracitato, recante una descrizione sommaria delle modifiche effettuate al documento. Il presente registro è formattato in modalità tabellare, dove sono riportate le seguenti voci:	
 \begin{itemize}
 	\item versione: identifica la versione del documento dopo la modifica;
 	\item data di modifica: identifica la data di ultima modifica del documento;
@@ -28,10 +28,10 @@ Ogni documento riporta una sezione denominata con il nome sopracitato, recante u
 \end{itemize}
 
 \subsubsection{Indice}
-Ogni documento prodotto dal gruppo {\Gruppo} contiene, all’inizio dello stesso, un indice cui scopo è quello di esplicitare le parti gerarchiche che compongono il documento in oggetto. 
+Ogni documento prodotto dal gruppo {\Gruppo} contiene, all’inizio dello stesso, un indice cui scopo è quello di esplicitare la struttura e le gerarchie del documento in oggetto. 
 
 \subsubsection{Elenco immagini}
-I documenti muniti di figure saranno provvisti di un indice delle figure contenute, con una breve descrizione della stessa ed il numero della pagina dove è collocata.
+I documenti muniti di figure saranno provvisti di un indice delle figure contenute in essi, con una breve descrizione della stessa ed il numero della pagina dove è collocata.
 
 \subsubsection{Elenco tabelle}
 I documenti muniti di tabelle, saranno provvisti di un indice delle tabelle contenente, per
