--- a/DocumentiInterni/NormeDiProgetto/src/ProcessiDiSupporto/src/Validazione.tex
+++ b/DocumentiInterni/NormeDiProgetto/src/ProcessiDiSupporto/src/Validazione.tex
@@ -1,5 +1,5 @@
 \subsection{Validazione}
-Lo scopo della validazione è accertare che il prodotto finale soddisfi il compito per il quale è stato creato, ovvero che rispetti i vincoli obbligatori del committente. Questo processo quindi restituisce il prodotto interamente, accertando e garantendo che sia conforme a tutti i requisiti del committente.
+Lo scopo della validazione è accertare che il prodotto finale soddisfi il compito per il quale è stato creato, ovvero che rispetti i vincoli obbligatori del committente. Questo processo quindi restituisce il prodotto nella sua interezza, accertando e garantendo che sia conforme a tutti i requisiti del committente.
 
 \subsubsection{Aspettative}
 Il processo di validazione deve rispettare i seguenti punti:
