--- a/DocumentiInterni/NormeDiProgetto/src/ProcessiDiSupporto/src/GestioneDellaQualita.tex
+++ b/DocumentiInterni/NormeDiProgetto/src/ProcessiDiSupporto/src/GestioneDellaQualita.tex
@@ -18,12 +18,12 @@ Gli strumenti con cui si cercherà di perseguire la qualità sopra citata sono:
 \end{itemize}
 
 \subsection{Verifica}
-Con questo processo, il gruppo {\Gruppo} si pone come obiettivo primario lo sviluppo di software e prodotti di qualità, sia a livello di documentazione sia a livello di codice prodotto. Tramite una serie di analisi e test, si assicura che il prodotto finito sarà conforme ad un livello di qualità del tutto accettabile per il soddisfacimento di tutti gli obiettivi prefissati dal committente. 
+Con questo processo, il gruppo {\Gruppo} si pone come obiettivo primario lo sviluppo di software e prodotti di qualità, sia a livello di documentazione sia a livello di codice prodotto. Tramite una serie di analisi e test, si assicura che il prodotto finito sarà conforme ad un livello di qualità del tutto accettabile per il soddisfacimento di tutti gli obiettivi prefissati con il committente ed il proponente.
 \subsection{Aspettative della verifica}
 Il processo di verifica viene eseguito secondo i seguenti criteri:
 \begin{itemize}
 	\item si seguono delle procedure prefissate e precedentemente definite;
-	\item ogni prodotto (documentazione e software) passa attraverso delle fasi definite, ed ognuna propedeutica a quella precedente.
+	\item ogni prodotto (documentazione e software) passa attraverso delle fasi definite, ognuna propedeutica a quella precedente.
 	\end{itemize}
 Al termine della verifica, si avrà un prodotto stabile e pronto per la fase di validazione successiva.
 
@@ -46,16 +46,16 @@ Come già lievemente accennato nel capitolo precedente, durante la fase di anali
 Scopo di questo test è la verifica degli algoritmi scritti su appunto una unità di codice precedentemente scelta. Questa fase di test si avvale di driver, ovvero simulatori di chiamate o azioni di un utente, e stub, che simula a sua volta una unità chiamata.
 
 \subsubsection{Test di integrazione}
-Il loro scopo è quello di ampliare man mano l’unità di codice testata, tramite integrazione di più unità già precedentemente testate, in modo da combinare e testare sempre più parti del codice. Procedendo con questi test, si formeranno agglomerati di codice testato progressivamente più grandi, fino ad arrivare all’inclusione totale del codice prodotto.
+Il loro scopo è quello di ampliare man mano l’unità di codice testata, tramite integrazione di più unità già precedentemente verificate, in modo da combinare e testare sempre più parti del codice. Procedendo con questi test, si formeranno agglomerati di codice verificato progressivamente più grandi, fino ad arrivare all’inclusione della quasi totalità del codice prodotto.
 
 \subsubsection{Test di sistema}
 I testi di sistema hanno lo scopo di testare l’applicativo prodotto nella sua interezza, portando alla luce eventuali problematiche sulle parti del codice sviluppate da altri sviluppatori. Tramite sempre questi test, si verifica che il prodotto soddisfi completamente tutti i requisiti richiesti.
 
 \subsubsection{Test di regressione}
-Questi test si effettuano a seguito di una aggiunta o modifica al sistema, verificando la qualità di nuove versioni di software scritte. Lo scopo primario è il test di tutte le nuove funzionalità implementate nel prodotto, verificando, inoltre, che le precedenti funzionalità già implementate abbiano mantenuto la loro logica e funzione.
+Questi test si effettuano a seguito di una aggiunta o modifica al sistema, verificando la qualità di nuove versioni software scritte. Lo scopo primario è il test di tutte le nuove funzionalità implementate nel prodotto, verificando, inoltre, che le precedenti funzionalità già implementate abbiano mantenuto la loro logica e funzione.
 
 \subsubsection{Test di accettazione}
-Questi test vengono effettuati con la partecipazione del committente, cui compito è quello di verificare il prodotto per garantire il soddisfacimento del cliente. Il superamento di questo test, garantisce che il software sia completamente collaudato e pronto per il rilascio.
+Questi test vengono effettuati con la partecipazione del committente, cui compito è quello di verificare il prodotto per garantire il soddisfacimento del cliente. Il superamento di questi, garantisce che il software sia completamente collaudato e pronto per il rilascio.
 
 \subsection{Codice identificativo dei test}
 Ogni test prodotto dal gruppo {\Gruppo}, adotterà la seguente nomenclatura:
@@ -66,17 +66,9 @@ Dove:
 	\item t identifica il tipo di test, che può essere:
 		\begin{itemize}
 			\item U: test di unità;
-			\item  I: test di integrazione;
+			\item I: test di integrazione;
 			\item S: test di sistema;
 			\item R: test di regressione;
 			\item A: test di accettazione.
 		\end{itemize}
 \end{itemize}
-
-\subsection{Strumenti}
-\subsubsection{Verifica ortografica}
-La verifica ortografico-sintattica viene svolta dall’editor utilizzato dal gruppo, ovvero Overleaf, TexEdit o TexStudio. 
-
-
-
-
